<resources>
    <string name="app_name" translatable="false">Climb The World</string>
    <string name="nearby_routes">Augmented Reality</string>
    <string name="map_view">Map View</string>
    <string name="tools">Tools</string>
    <string name="support_me">Support us"</string>
    <string name="version">V %s</string>
    <string name="data_manager">Downloads Manager</string>
    <string name="settings">Settings</string>
    <string name="license_about">Third party Licenses</string>
    <string name="units_converter">Unit Converter</string>
    <string name="sensors_env">Environmental Sensors</string>
    <string name="walkie_talkie">Walkie-Talkie</string>
    <string name="setup">Setup Wizard</string>
    <string name="sensors">Environment Sensors</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="light">Light Level</string>
    <string name="relative_humidity">Rel. Humidity</string>
    <string name="dew_point">Dew Point</string>
    <string name="absolute_humidity">Abs. Humidity</string>
    <string name="sensor_magnetometer_calibration">Magnetometer accuracy %s. Perform figure 8 calibration motion.</string>
    <string name="hint_compass">Show coordinates.</string>
    <string name="hint_center_gps">Center on GPS.</string>
    <string name="hint_create_new_route">Create new node.</string>
    <string name="hint_settings">Open settings view.</string>
    <string name="hint_filter">Filter visible nodes based on different criteria.</string>
    <string name="hint_ar_settings">Open augmented reality settings.</string>
    <string name="hint_download">Open download manager.</string>
    <string name="hint_layer">Toggle map layers.</string>
    <string name="hint_zoom_in">Zoom in.</string>
    <string name="hint_zoom_out">Zoom out.</string>
    <string name="zoom_in">Zoom In</string>
    <string name="local_coordinate">Local Coordinates</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="elevation_si">Elevation (m)</string>
    <string name="elevation">Elevation</string>
    <string name="distance">Distance To</string>
    <string name="length_si">Length (m)</string>
    <string name="length">Length</string>
    <string name="azimuth">Azimuth</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="climb_style">Climbing Styles</string>
    <string name="node_type">Node Type</string>
    <string name="description">Description</string>
    <string name="description_num_characters">Description (%d of 255 characters)</string>
    <string name="website">Website</string>
    <string name="raw_node_tags">All tags</string>
    <string name="climbing_route_information">Route Tags</string>
    <string name="crag_information">Crag Tags</string>
    <string name="contact_information">Contact Tags</string>
    <string name="general_information">General Tags</string>
    <string name="tag">Tag</string>
    <string name="value">Value</string>
    <string name="no_josm_app">No application that can handle JOSM data was found. Consider installing &lt;a href=\"https://vespucci.io/\">Vespucci&lt;/a> or any other JOSM editor.</string>
    <string name="advanced_json_editor">Advanced JSON Editor</string>
    <string name="edit_with_openstreetmap_id_editor">Edit With OpenStreetMap Id Editor</string>
    <string name="edit_with_vespucci_map_editor">Edit With Vespucci Map Editor</string>
    <string name="pitches">Pitches</string>
    <string name="bolts">Bolts/Gear</string>
    <string name="number_of_routes">Number of Routes</string>
    <string name="min_length">Min Length</string>
    <string name="max_length">Max Length</string>
    <string name="min_grade">Min Grade (%s)</string>
    <string name="max_grade">Max Grade (%s)</string>
    <string name="grade_system">Grade (%s)</string>
    <string name="grade_conversion">Grade conversion: %1$s (%2$s)</string>
    <string name="grade_range">%1$s – %2$s</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="_123">123</string>
    <string name="street">Street</string>
    <string name="unit">Unit</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postcode">Postcode</string>
    <string name="artificial_information">Artificial Area Tags</string>
    <string name="artificial_area_type">Artificial Area Type</string>
    <string name="climbing_gym">Climbing Gym</string>
    <string name="artificial_tower">Artificial Tower</string>
    <string name="N">N</string>
    <string name="NNE">NNE</string>
    <string name="NE">NE</string>
    <string name="ENE">ENE</string>
    <string name="E">E</string>
    <string name="ESE">ESE</string>
    <string name="SE">SE</string>
    <string name="SSE">SSE</string>
    <string name="S">S</string>
    <string name="SSW">SSW</string>
    <string name="SW">SW</string>
    <string name="WSW">WSW</string>
    <string name="W">W</string>
    <string name="WNW">WNW</string>
    <string name="NW">NW</string>
    <string name="NNW">NNW</string>
    <string name="sport">Sport Climbing</string>
    <string name="sport_short">sport</string>
    <string name="sport_description">Sport climbing routes tend to be well protected with pre-placed bolt-anchors.</string>
    <string name="boulder">Bouldering</string>
    <string name="boulder_short">boulder</string>
    <string name="boulder_description">The practice of climbing on large boulders. Typically, this is close to the ground.</string>
    <string name="toprope">Top Rope</string>
    <string name="toprope_short">top</string>
    <string name="toprope_description">To belay from a fixed anchor point above the climb.</string>
    <string name="trad">Traditional Climbing (Trad)</string>
    <string name="trad_short">trad</string>
    <string name="trad_description">Traditional (or "trad") climbers will place their own protection as they climb.</string>
    <string name="multipitch">Multi-pitch Climbing</string>
    <string name="multipitch_short">multipitch</string>
    <string name="multipitch_description">Climbing on routes that are too long for a single belay rope.</string>
    <string name="ice">Ice Climbing</string>
    <string name="ice_short">ice</string>
    <string name="ice_description">Ice climbing is the activity of ascending inclined ice formations.</string>
    <string name="mixed">Mixed Climbing</string>
    <string name="mixed_short">mixed</string>
    <string name="mixed_description">A combination of ice climbing and rock climbing using ice climbing equipment.</string>
    <string name="deepwater">Deep Water Soloing</string>
    <string name="deepwater_short">deepwater</string>
    <string name="deepwater_description">Free climbing an area that overhangs a deep enough body of water to allow for a safe fall.</string>
    <string name="route">Route</string>
    <string name="route_description">The path of a particular climb, or a predefined set of moves.</string>
    <string name="crag">Crag</string>
    <string name="crag_description">A small area with climbing routes, often just a small cliff face or a few boulders.</string>
    <string name="area">Area</string>
    <string name="area_description">A region with numerous climbing routes.</string>
    <string name="artificial">Artificial Climbing</string>
    <string name="artificial_description">Artificial climbing walls including gyms and other man made structures.</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_description">Node marked with the climbing tag. No other relevant tags.</string>
    <string name="edit">Edit</string>
    <string name="NAN">Not for rendering</string>
    <string name="navigate">Navigate To Location</string>
    <string name="copy_url">Share Location As</string>
    <string name="climb_the_world_url">Climb the World Url</string>
    <string name="open_street_map_url">Open Street Map Url</string>
    <string name="google_maps_url">Google Maps Url</string>
    <string name="geo_url">Geo Url</string>
    <string name="location_copied">Location copied</string>
    <string name="nav_share">Navigate/Share</string>
    <string name="save">Save changes</string>
    <string name="delete">Delete route</string>
    <string name="cancel">Cancel</string>
    <string name="push">Push local changes</string>
    <string name="revert">Revert local changes</string>
    <string name="filter">Filter</string>
    <string name="loading_dialog">Working…</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="points_of_interest_value">%d Points of Interest</string>
    <string name="download_dialog_message">No regional data has been downloaded yet. Consider downloading a region of interest before using the app.</string>
    <string name="center_map_on_point">Center Map on Point</string>
    <string name="delete_confirmation">Delete: \"%s\"?</string>
    <string name="delete_confirmation_message">Do you really want to delete this node?</string>
    <string name="gyroscope_missing">Gyroscope Missing</string>
    <string name="gyroscope_missing_message">No hardware gyroscope found. Some features of this app will not run correctly.</string>
    <string name="node_not_found">Could not find this item in the local database.</string>
    <string name="experimental_view">Experimental View</string>
    <string name="experimental_view_message">The Augmented Reality view uses all your device\'s sensors. &lt;br /&gt;&lt;br /&gt; Make sure your device sensors are calibrated. Please see this &lt;a href=&quot;https://support.google.com/maps/answer/2839911?co=GENIE.Platform%3DAndroid&amp;hl=en&amp;oco=0&quot;/a&gt;help page&lt;/a&gt; for more information.</string>
    <string name="ar_warning">Augmented Reality May Be Dangerous</string>
    <string name="ar_warning_message">When using the Augmented Reality view please consider the followings:&lt;br /&gt;&lt;br /&gt;
        &#8226; Before using the Augmented Reality view, make sure you are aware of the dangers in your surroundings. Especially when using the app outdoors.&lt;br /&gt;&lt;br /&gt;
        &#8226; Adult supervision is highly recommended if children are using the Augmented Reality view.
    </string>
    <string name="revert_confirmation">Revert local changes?</string>
    <string name="revert_confirmation_message">Continuing this operation will revert all selected local changes.</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="tutorial_welcome_title">Welcome to\n\"%s\"</string>
    <string name="tutorial_welcome_message">\"%s\" is a rock-climbing app built around the OpenStreetMap project. OpenStreetMap is a map of the world, created by people like you and free to use under an open license.
        &lt;br />\"%s\" is designed to track individual climbing routes and try to position them as accurate as possible.
        &lt;br />This short tutorial will go through the basic app setup with you.</string>
    <string name="tutorial_region_download_title">Download Climbing Data</string>
    <string name="tutorial_region_download_message">The App is designed to work in offline mode. Data will need to be downloaded onto the device prior to being used.
    &lt;br />It is recommended to download climbing data over a Wi-Fi connection.</string>
    <string name="tutorial_routes_setup_title">Grading System</string>
    <string name="unit_converter_grades">Climbing Grade</string>
    <string name="unit_converter_length">Length</string>
    <string name="unit_converter_weight">Weight</string>
    <string name="unit_converter_temperature">Temperature</string>
</resources>