<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/converter_navigation_climbing_grades"
        android:icon="@drawable/ic_converter_grades"
        android:title="@string/unit_converter_grades" />

    <item
        android:id="@+id/converter_navigation_length_units"
        android:icon="@drawable/ic_converter_length"
        android:title="@string/unit_converter_length" />

    <item
        android:id="@+id/converter_navigation_weight_units"
        android:icon="@drawable/ic_converter_weight"
        android:title="@string/unit_converter_weight" />

    <item
        android:id="@+id/converter_navigation_temperature_units"
        android:icon="@drawable/ic_is_converter_temperature"
        android:title="@string/unit_converter_temperature" />

</menu>
