<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentEditNode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ItemSectionContainer"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textNodeSpecific"
            style="@style/ItemSectionTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artificial_information" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemSectionSubTitle"
            android:text="@string/artificial_area_type"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkedButton="@id/radioGym"
            >

            <RadioButton
                android:id="@+id/radioGym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climbing_gym"
                />

            <RadioButton
                android:id="@+id/radioTower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artificial_tower"
                />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>