<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ar.climbing.EditTopoActivity">

    <RelativeLayout
        android:id="@+id/augmentedReality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <org.osmdroid.views.MapView
            android:id="@+id/openMapView"
            android:layout_width="wrap_content"
            android:layout_height="150dip" />

        <ImageButton
            android:id="@+id/compassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/compass"
            android:cropToPadding="true"
            android:onClick="onCompassButtonClick"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_compass_round" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editTopoName"
                    android:text="@string/name"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTopoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/editLatitude"
                        android:text="@string/latitude"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLatitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/editLongitude"
                        android:text="@string/longitude"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLongitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editElevation"
                    android:text="@string/elevation"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editElevation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editLength"
                    android:text="@string/length"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/protection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protection"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/protectionList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <CheckBox
                        android:id="@+id/bolted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/protection_bolted" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/grading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/gradeSpinner"
                    android:text="@string/grade"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/gradeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/climb_style"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/styleList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <CheckBox
                        android:id="@+id/boulder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/boulder" />

                    <CheckBox
                        android:id="@+id/deepwater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deepwater" />

                    <CheckBox
                        android:id="@+id/ice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ice" />

                    <CheckBox
                        android:id="@+id/mixed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mixed" />

                    <CheckBox
                        android:id="@+id/multipitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/multipitch" />

                    <CheckBox
                        android:id="@+id/sport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sport" />

                    <CheckBox
                        android:id="@+id/toprope"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/toprope" />

                    <CheckBox
                        android:id="@+id/trad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trad" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editDescription"
                    android:text="@string/description"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textAutoCorrect|textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dip"
                style="?android:attr/buttonBarStyle"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarPositiveButtonStyle"
                    android:onClick="onClickButtonSave"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClickButtonDelete"
                    style="?android:attr/buttonBarPositiveButtonStyle"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarNegativeButtonStyle"
                    android:onClick="onClickButtonCancel"
                    android:text="@string/cancel" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

