<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/TextContainer"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ItemSectionSubTitle"
                    android:labelFor="@id/editLatitude"
                    android:text="@string/latitude"
                    android:textAllCaps="false"
                    />

                <TextView
                    android:id="@+id/editLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ItemSectionSubTitle"
                    android:labelFor="@id/editLongitude"
                    android:text="@string/longitude"
                    android:textAllCaps="false"
                    />

                <TextView
                    android:id="@+id/editLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ItemSectionSubTitle"
                android:labelFor="@id/editElevation"
                android:text="@string/elevation"
                android:textAllCaps="false"
                />

            <TextView
                android:id="@+id/editElevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TextView
                android:id="@+id/north"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:text="@string/N"
                />

            <ImageView
                android:id="@+id/compassButton"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/north"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_compass"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/compassButton"
                android:text="@string/E"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/compassButton"
                android:text="@string/W"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/compassButton"
                android:text="@string/S"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/azimuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ItemSectionSubTitle"
                android:labelFor="@id/editElevation"
                android:text="@string/azimuth"
                android:textAllCaps="false"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/editAzimuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>